skip hidden rows/columns for spellchecking, tdf#99607

Change-Id: Ic84368f4bb70973c3c5f5293d852fc573c5f73f7
Reviewed-on: https://gerrit.libreoffice.org/29601
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>